<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_results_item"
    tools:background="@color/colorBackgroundDark"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_elevation"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout

            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/colorItemBackgroundDark"
            android:padding="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                tools:text="Title of the Tv Show could be very long"
                android:id="@+id/title"
                android:layout_width="@dimen/results_item_title_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_small"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorTextLight"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="@dimen/image_view_width"
                    android:layout_height="@dimen/image_view_height"
                    android:scaleType="centerInside"
                    tools:background="@mipmap/ic_launcher"/>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/start_year"
                        tools:text="2000"
                        android:paddingBottom="@dimen/padding_small"
                        android:textSize="@dimen/text_size_small"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextLight"/>

                    <TextView
                        android:id="@+id/user_score"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:padding="@dimen/padding_small"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@drawable/user_score_circle"
                        android:textColor="@android:color/white"
                        android:textSize="16dp"
                        tools:text="6.9"
                        />

                    <ImageButton
                        android:id="@+id/button_add"
                        android:layout_gravity="center"
                        android:background="?android:selectableItemBackground"
                        app:srcCompat="@drawable/ic_add_white_24dp"
                        android:layout_width="@dimen/btn_square_side"
                        android:layout_height="@dimen/btn_square_side"
                        android:layout_margin="@dimen/btn_square_margin"/>


                    <TextView
                        android:id="@+id/show_more_details"
                        android:background="?android:selectableItemBackground"
                        android:paddingTop="@dimen/padding_small"
                        android:paddingBottom="@dimen/padding_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"
                        android:text="@string/show_more"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
