<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/colorBackgroundDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_results"
            android:layout_weight="1"
            android:scrollbars="vertical"

            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/find_results_list_item"
            >
        </android.support.v7.widget.RecyclerView>



    </LinearLayout>

    <ProgressBar
    android:id="@+id/loading_indicator"
    android:visibility="invisible"
    style="@style/Widget.AppCompat.ProgressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
        />
</RelativeLayout>
