<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorItemBackgroundDark"
    android:layout_margin="@dimen/padding_small"
    android:paddingRight="@dimen/padding_large"
    android:paddingLeft="@dimen/padding_large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/colorTextLight"
                    tools:text="TV Show name"/>
                <org.apmem.tools.layouts.FlowLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:id="@+id/last_update"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium"
                        android:textColor="@color/colorAccent"
                        android:paddingRight="@dimen/padding_medium"
                        tools:text="23 MAY 2016"/>

                    <CheckBox
                        android:text="@string/select_all"
                        android:layout_weight="1"
                        android:textColor="@color/colorTextLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/check_box_select_all"
                        />


                </org.apmem.tools.layouts.FlowLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/button_individual"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_weight="1"
                >
                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/triangle"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:id="@+id/expandable_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_layout"
        app:ael_duration="400"
        app:ael_expanded="false"
        app:ael_interpolator="linear"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_individual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </com.github.aakira.expandablelayout.ExpandableLinearLayout>

</RelativeLayout>