<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:background="@color/colorItemBackgroundDark"

              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/season_name"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/colorTextLight"
        tools:text="Season 4"/>


    <TextView
        android:id="@+id/last_update"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/colorAccent"
        android:paddingRight="@dimen/padding_medium"
        tools:text="23 MAY 2016"/>

    <CheckBox
        android:id="@+id/check_box_update"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>