...
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <ImageButton
                        android:id="@+id/btn_update"
                        android:theme="@style/AppTheme.Button"
                        app:srcCompat="@drawable/ic_update_white_24dp"
                        android:layout_width="@dimen/btn_square_side"
                        android:layout_height="@dimen/btn_square_side"
                        android:layout_margin="@dimen/btn_square_margin"/>

...
